# binsweep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
examples/: README.md  fixture.sh
scripts/: smoke.sh
src/: cargo.rs  cli.rs  gobin.rs  inventory.rs  json.rs  lib.rs  main.rs  npm.rs  pipx.rs  report.rs  shadow.rs  util.rs
tests/: cli.rs
